--- a/manifest.json
+++ b/manifest.json
@@ -28,5 +28,9 @@
     },
     "default_title": "Chess.com Coordinates",
     "default_popup": "popup/popup.html"
-  }
+  },
+  "web_accessible_resources": [{
+    "resources": ["fonts/impact.woff"],
+    "matches": ["*://*.chess.com/*"]
+  }]
 }
